# dbt_demo

./: .env.example  .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
models/marts/: customers.yml  order_items.yml  orders.yml
models/staging/: __sources.yml  stg_order_items.yml
seeds/: raw_customers.csv  raw_stores.csv
