[tool.poetry]
name = "dbt-demo"
version = "0.1.0"
description = ""
authors = ["Cristian Webber <cristian.webber@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
