[tool.poetry]
name = "dbt-demo"
version = "0.1.0"
description = ""
authors = ["Cristian Webber <cristian.webber@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "1.7.9"
dbt-duckdb = "1.7.5"
sqlmesh = {extras = ["web"], version = "^0.100.2"}

[tool.poetry.group.dev.dependencies]
jafgen = "^0.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
